# poly-arb-scanner

./: .gitignore  README.md  arbitrage.py  debug.py  debug2.py  main.py  polymarket.py  pyproject.toml  test_app.py  test_get_prob.py  test_regex.py  test_tradfi.py  tradfi.py  update_tradfi.py
