[project]
name = "poly-arb-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.2",
    "requests>=2.33.0",
    "requests-cache>=1.3.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "yfinance>=1.2.0",
]
